--- a/COMP4537/termProject/pokeAPI/html/documentation.html
+++ b/COMP4537/termProject/pokeAPI/html/documentation.html
@@ -55,6 +55,32 @@
 					</tbody>
 				</table>	
 			</div>
+			<div class='code-body'>
+<pre>
+	<code>
+<HTML><span class='red'>Example Trainer</span></HTML>
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainerId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>200</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">firsttName</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>soos</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">lastName</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>kida</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">password</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>password</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">email</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>sookida@sookida.com</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">userName</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Sookida</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">party_partyId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>500</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainer_image</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>https://firebasestorage.googleapis.com/v0/b/pokemonapi-5ae54.appspot.com/o/1.jpg?alt=media&token=3766614b-db92-4265-97eb-529a778</span><span class="lightblue">"</span>
+<HTML><span class='lightblue'>}</span></HTML> 		
+	</code>
+</pre>
+
+<pre>
+	<code>
+The following is a sample response from the <HTML><span class='red'>/login</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">token</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>oi[opiautaopweieutaoyu099awtybaw0teu9v...</span><span class="lightblue">"</span>
+<HTML><span class='lightblue'>}</span></HTML> 		
+	</code>
+</pre>
+			</div>
 		</section>
 		
 		<section id='pokemon-section'>
@@ -120,7 +146,7 @@
 <pre>
 	<code>
 <HTML><span class='red'>Example Pokemon</span></HTML>
-{
+<HTML><span class='lightblue'>{</span></HTML>
 	<HTML><span class='lightblue'>"</span><span class="purple">pokeNo</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='orange'>1</span><span class="lightblue">"</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">name</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Bulbasaur</span><span class="lightblue">"</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">type1</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Grass</span><span class="lightblue">"</span><span class='blue'>,</span>
@@ -135,10 +161,70 @@
 	<HTML><span class='lightblue'>"</span><span class="purple">generation</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>1</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">legendary</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>0</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">image</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>https://firebasestorage.googleapis.com/v0/b/pokemonapi-5ae54.appspot.com/o/1.jpg?alt=media&token=3766614b-db92-4265-97eb-529a778</span><span class="lightblue">"</span>
-} 
+<HTML><span class='lightblue'>}</span></HTML> 
 		
 	</code>
 </pre>
+
+<pre>
+	<code>
+The following is a sample response from the <HTML><span class='red'>/pokemon</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">pokeNo</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='orange'>75</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">name</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Graveler</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">type1</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Rock</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">type2</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Ground</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">total</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>390</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">hp</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>55</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">attack</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>95</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">defense</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>115</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">spec_atk</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>45</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">spec_def</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>45</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">speed</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>35</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">generation</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>1</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">legendary</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>0</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">image</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>https://firebasestorage.googleapis.com/v0/b/pokemonapi-5ae54.appspot.com/o/75.jpg?alt=media&token=3766614b-db92-4265-97eb-529a77</span><span class="lightblue">"</span>
+<HTML><span class='lightblue'>}</span></HTML> 		
+
+
+The following is a sample response from the <HTML><span class='red'>/pokemon/update</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainer</span><span class="lightblue">"</span></HTML><span class='blue'>:
+		<HTML><span class='lightblue'>{</span></HTML>
+			<HTML><span class='lightblue'>"</span><span class="yellow">message</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Successfully UPDATEAD Graveler.</span><span class="lightblue">"</span>
+		<HTML><span class='lightblue'>}</span></HTML>	
+<HTML><span class='lightblue'>}</span></HTML>
+
+
+The following is a sample response from the <HTML><span class='red'>/pokemon/delete</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainer</span><span class="lightblue">"</span></HTML><span class='blue'>:
+		<HTML><span class='lightblue'>{</span></HTML>
+			<HTML><span class='lightblue'>"</span><span class="yellow">deletedPokemon</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Successfully DELETED No.152 pokemon.</span><span class="lightblue">"</span>
+		<HTML><span class='lightblue'>}</span></HTML>	
+<HTML><span class='lightblue'>}</span></HTML>
+
+
+The following is a sample response from the <HTML><span class='red'>/pokemon/create</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">pokeNo</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='orange'>152</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">name</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Sookida</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">type1</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Dragon</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">type2</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Fairy</span><span class="lightblue">"</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">total</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>390</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">hp</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>515</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">attack</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>100</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">defense</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>115</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">spec_atk</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>100</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">spec_def</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>100</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">speed</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>100</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">generation</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>1</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">legendary</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>1</span><span class='blue'>,</span>
+	<HTML><span class='lightblue'>"</span><span class="purple">image</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>https://firebasestorage.googleapis.com/v0/b/pokemonapi-5ae54.appspot.com/o/75.jpg?alt=media&token=3766614b-db92-4265-97eb-529a77</span><span class="lightblue">"</span>
+<HTML><span class='lightblue'>}</span></HTML> 
+	</code>
+</pre>
+
 				</div>
 			</div>
 			<div id='pokemon-Response'></div>
@@ -215,7 +301,7 @@
 <pre>
 	<code>
 <HTML><span class='red'>Example Trainer</span></HTML>
-{
+<HTML><span class='lightblue'>{</span></HTML>
 	<HTML><span class='lightblue'>"</span><span class="purple">trainerId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>200</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">firsttName</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>soos</span><span class="lightblue">"</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">lastName</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>kida</span><span class="lightblue">"</span><span class='blue'>,</span>
@@ -224,7 +310,41 @@
 	<HTML><span class='lightblue'>"</span><span class="purple">userName</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Sookida</span><span class="lightblue">"</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">party_partyId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>500</span><span class='blue'>,</span>
 	<HTML><span class='lightblue'>"</span><span class="purple">trainer_image</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>https://firebasestorage.googleapis.com/v0/b/pokemonapi-5ae54.appspot.com/o/1.jpg?alt=media&token=3766614b-db92-4265-97eb-529a778</span><span class="lightblue">"</span>
-} 		
+<HTML><span class='lightblue'>}</span></HTML>  
+
+
+The following is a sample response from the <HTML><span class='red'>/trainer</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainer</span><span class="lightblue">"</span></HTML><span class='blue'>:
+		<HTML><span class='lightblue'>{</span></HTML>
+			<HTML><span class='lightblue'>"</span><span class="purple">trainerId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>200</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">firsttName</span><span class="lightblue">"</span></HTML><span class='blue'>: </span><span class="lightblue">"</span><span class='green'>soos</span><span class="lightblue">"</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">lastName</span><span class="lightblue">"</span></HTML><span class='blue'>: </span><span class="lightblue">"</span><span class='green'>kida</span><span class="lightblue">"</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">password</span><span class="lightblue">"</span></HTML><span class='blue'>: </span><span class="lightblue">"</span><span class='green'>password</span><span class="lightblue">"</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">email</span><span class="lightblue">"</span></HTML><span class='blue'>: </span> <span class="lightblue">"</span><span class='green'>sookida@sookida.com</span><span class="lightblue">"</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">userName</span><span class="lightblue">"</span></HTML><span class='blue'>: </span> <span class="lightblue">"</span><span class='green'>Sookida</span><span class="lightblue">"</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">party_partyId</span><span class="lightblue">"</span></HTML><span class='blue'>: </span><span class='orange'>500</span><span class='blue'>,</span>
+<HTML><span class='lightblue'>"</span><span class="yellow">trainer_image</span><span class="lightblue">"</span></HTML><span class='blue'>: <span class='orange'>500</span><span class='blue'></span>
+		<HTML><span class='lightblue'>}</span></HTML>	
+<HTML><span class='lightblue'>}</span></HTML>
+
+
+The following is a sample response from the <HTML><span class='red'>/trainer/update</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainer</span><span class="lightblue">"</span></HTML><span class='blue'>:
+		<HTML><span class='lightblue'>{</span></HTML>
+			<HTML><span class='lightblue'>"</span><span class="yellow">message</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Successfully updated soos kida sookida@sookida.com.</span><span class="lightblue">"</span>
+		<HTML><span class='lightblue'>}</span></HTML>	
+<HTML><span class='lightblue'>}</span></HTML>
+
+
+The following is a sample response from the <HTML><span class='red'>/trainer/delete</span></HTML> endpoint:
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">trainer</span><span class="lightblue">"</span></HTML><span class='blue'>:
+		<HTML><span class='lightblue'>{</span></HTML>
+			<HTML><span class='lightblue'>"</span><span class="yellow">message</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class="lightblue">"</span><span class='green'>Successfully deleted trainer.</span><span class="lightblue">"</span>
+		<HTML><span class='lightblue'>}</span></HTML>	
+<HTML><span class='lightblue'>}</span></HTML>
 	</code>
 </pre>
 				</div>
@@ -303,10 +423,10 @@
 				<div class='code-block'>
 <pre>
 	<code>
-<HTML><span class='red'>Example Trainer</span></HTML>
-{
-	<HTML><span class='lightblue'>"</span><span class="purple">partyId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>500</span><span class='blue'>,</span>
-} 		
+<HTML><span class='red'>Example Party</span></HTML>
+<HTML><span class='lightblue'>{</span></HTML>
+	<HTML><span class='lightblue'>"</span><span class="purple">partyId</span><span class="lightblue">"</span></HTML><span class='blue'>:</span> <span class='orange'>500
+<HTML><span class='lightblue'>}</span></HTML>  		
 	</code>
 </pre>
 				</div>
