fix: typo'd the pathname

--- a/COMP4537/termProject/pokeAPI/index.html
+++ b/COMP4537/termProject/pokeAPI/index.html
@@ -35,7 +35,7 @@
 						<a href="#" class="">Login</a>
 					</li>
 					<li class="">
-						<a href="#" class="">Dcoumentation</a>
+						<a href="./termProject/pokeAPI/html/documentation.html" class="">Dcoumentation</a>
 					</li>
 					<li class="">
 						<a href="#" class="">Contact</a>
