--- a/COMP4537/termProject/pokeAPI/index.html
+++ b/COMP4537/termProject/pokeAPI/index.html
@@ -32,10 +32,10 @@
 			<div class="links">
 				<ul class="links-unordered-list">
 					<li class="active">
-						<a href="#" class="">Login</a>
+						<a href="#https://darkraginginferno.github.io/COMP4537termProject/pokeAPI/index.html" class="">Login</a>
 					</li>
 					<li class="">
-						<a href="./termProject/pokeAPI/doc/documentation.html" class="">Dcoumentation</a>
+						<a href="https://darkraginginferno.github.io/COMP4537termProject/pokeAPI/doc/documentation.html" class="">Documentation</a>
 					</li>
 					<li class="">
 						<a href="#" class="">Contact</a>
