--- a/COMP4537/termProject/pokeAPI/index.html
+++ b/COMP4537/termProject/pokeAPI/index.html
@@ -35,10 +35,10 @@
 						<a href="#https://darkraginginferno.github.io/COMP4537termProject/pokeAPI/index.html" class="">Login</a>
 					</li>
 					<li class="">
-						<a href="https://darkraginginferno.github.io/COMP4537termProject/pokeAPI/doc/documentation.html" class="">Documentation</a>
+						<a href="https://darkraginginferno.github.io/COMP4537/termProject/pokeAPI/doc/documentation.html" class="">Documentation</a>
 					</li>
 					<li class="">
-						<a href="#" class="">Contact</a>
+						<a href="https://amarsingara.com/" class="">Contact</a>
 					</li>
 				</ul>
 			</div>
