moved pokeAPI a directory up

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <img src="assets/img/pokemonAPI.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Pokemon API</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="https://darkraginginferno.github.io/COMP4537/pokeAPI/index.html" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -342,7 +342,7 @@
             <p>A RESTful service API taking on the beloved Pokemon theme. Designed with a complete MySQL relational database using AWS with utilized stored procedures with respective endpoints.</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="https://darkraginginferno.github.io/COMP4537/pokeAPI/index.html" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
