correct paths I think

--- a/pokeAPI/index.html
+++ b/pokeAPI/index.html
@@ -32,10 +32,10 @@
 			<div class="links">
 				<ul class="links-unordered-list">
 					<li class="active">
-						<a href="https://darkraginginferno.github.io/COMP4537/pokeAPI/index.html" class="">Login</a>
+						<a href="https://darkraginginferno.github.io/pokeAPI/index.html" class="">Login</a>
 					</li>
 					<li class="">
-						<a href="https://darkraginginferno.github.io/COMP4537/termProject/doc/documentation.html" class="">Documentation</a>
+						<a href="https://darkraginginferno.github.io/doc/documentation.html" class="">Documentation</a>
 					</li>
 					<li class="">
 						<a href="https://amarsingara.com/" class="">Contact</a>
