--- a/pokeAPI/index.html
+++ b/pokeAPI/index.html
@@ -35,7 +35,7 @@
 						<a href="https://darkraginginferno.github.io/pokeAPI/index.html" class="">Login</a>
 					</li>
 					<li class="">
-						<a href="https://darkraginginferno.github.io/doc/documentation.html" class="">Documentation</a>
+						<a href="https://darkraginginferno.github.io/pokeAPI/doc/documentation.html" class="">Documentation</a>
 					</li>
 					<li class="">
 						<a href="https://amarsingara.com/" class="">Contact</a>
