like 80% done portfolio

--- a/index.html
+++ b/index.html
@@ -288,7 +288,15 @@
 
                 <h3>Contact</h3>
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                <form>
+
+                <div class='contact-me'>
+                    <span>Email: jvbpoku@hotmail.com</span>
+                    <span>
+                        Vancouver, British Columbia, Canada 
+                    </span>
+                    <span>Telephone: +1 778.238.1756</span>
+                </div>
+                <!-- <form>
                     <div class="row">
                         <div class="col-sm-6">
                             <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
@@ -301,7 +309,7 @@
                         </div>
                     </div>
                     <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
-                </form>
+                </form> -->
             </div>
         </section><!-- /.section-form -->
 
