--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           <div class="modal-body">
             <h4 class="modal-title">ImSimPy</h4>
             <span class="subtitle">Medical Imaging Simulator Contract | Full-Stack | Proprietary Code</span>
-            <p>ImSimPy is a medical imaging software application. Written in Python the application implements a 3D Voxel based graphics and image processing techniques. The project hopes to provide a simulator that can be used to training and eductional purposes.</p>
+            <p>ImSimPy is a medical imaging software application. Written in Python the application implements a 3D Voxel based graphics and image processing techniques. The project hopes to provide a simulator that can be used for training and eductional purposes.</p>
           </div>
           <div class="modal-footer">
             <a href="#" class="btn btn-fill">Visit Page</a>
